syntax = "proto3";

package io.xpring;

option java_multiple_files = true;
option java_outer_classname = "GetFeeRequestProto";
option java_package = "io.xpring.proto";

// A request for the current transaction fee on the ledger.
// Next field: 1
message GetFeeRequest {
}
